# tradingview

./: .gitignore  ARCHITECTURE.md  PRD.md  QUICKSTART.md  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/ai/: __init__.py  context.py  router.py  service.py
backend/app/alerts/: __init__.py  dispatcher.py  router.py
backend/app/alerts/channels/: telegram.py
backend/app/auth/: __init__.py
backend/app/backtest/: __init__.py
backend/app/core/: config.py  db.py  deps.py  security.py
backend/app/impact/: __init__.py  router.py  service.py  weights_seed.py
backend/app/indicators/: __init__.py  engine.py
backend/app/marketdata/: fno_seed.py  router.py  service.py
backend/app/marketdata/adapters/: base.py
backend/app/marketdata/ingest/: bhavcopy.py  universe.py  yahoo.py
backend/app/news/: __init__.py
backend/app/options/: __init__.py  analytics.py  nse_chain.py  router.py  service.py
backend/app/portfolio/: __init__.py
backend/app/risk/: __init__.py
backend/app/scanner/: evaluator.py  router.py  runner.py  schema.py  state.py
backend/app/workers/: jobs.py  scheduler.py
backend/tests/: test_ai_context.py  test_dispatcher.py  test_evaluator.py  test_fno_seed.py  test_impact.py  test_indicators.py  test_ingest.py  test_marketdata_service.py  test_options.py  test_scanner_schema.py  test_yahoo.py
backend/tests/fixtures/: fo_mktlots_sample.csv  sec_bhavdata_full_sample.csv
backend/trading_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.local.example  middleware.ts  (+2 more)
(+28 files in other folders)
