[project]
name = "trading-platform-backend"
version = "0.1.0"
description = "FastAPI backend for the AI Trading Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pandas>=2.2",
    "pandas-ta>=0.3.14b0",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "python-jose[cryptography]>=3.3",
    "supabase>=2.10",
    "litellm>=1.52",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
